@startuml
'https://plantuml.com/class-diagram

class ListController{
    main()
    start()
}

class FXController{
    +selectItemButton()
    +displayIncompleteListButton()
    +displayCompleteItemsButton()
    +DisplayListItemsButton()
    +displayList()
    +clear()
    +removeListButton()
    +addItemButton()
    +itemUpdateButton()
    +clearSelectionButton()
    +exportListButton()
    +importListButton()
}

class TodoList{
    -ArrayList<TodoItem> allItems

    +getList()
    +addItem()
    +updateItem()
    +removeItem()
    +getItem()
    +doesNameExist()
    +clearListItems()
    +isDescriptionValid()
    +outputList()
    +importList()
}

class Item{
    -String name
    -String description
    -LocalDate date
    -Boolean isComplete

    +setName()
    +getName()
    +setDescription()
    +getDescription()
    +setDate()
    +getDate()
    +setComplete()
    +getComplete()
}




javafx.Application <|-- ListController
ListController o- FXController
TodoList *-- Item
FXController o- TodoList
@enduml